gap fixed

--- a/src/components/02_pages/04_ServicesPages/AllServicesPage/blocks/ServicesListBlock/ServicesListBlock.module.scss
+++ b/src/components/02_pages/04_ServicesPages/AllServicesPage/blocks/ServicesListBlock/ServicesListBlock.module.scss
@@ -31,24 +31,24 @@
 .cardsLayout {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 60px 50px;
+  gap: 50px;
 
   @include breakpoint(screen1280) {
-    gap: 40px 40px;
+    gap: 40px;
   }
 
   @include breakpoint(screen1024) {
-    gap: 30px 30px;
+    gap: 30px;
     align-items: start;
   }
 
   @include breakpoint(screen768) {
     grid-template-columns: auto;
-    gap: 50px 50px;
+    gap: 50px;
   }
 
   @include breakpoint(screen576) {
-    gap: 32px 32px;
+    gap: 32px;
   }
 
 }
